--- a/css/styles.css
+++ b/css/styles.css
@@ -34,6 +34,14 @@ h1 {
   gap: 20px;
 }
 
+.dropdown-menu label {
+  color: #fff;
+}
+
+.dropdown-menu select {
+  padding: 5px 8px;
+}
+
 .dropdown {
   display: flex;
   align-items: center;
@@ -42,9 +50,14 @@ h1 {
   border-radius: 10px;
 }
 
+.pie-text {
+  display: none;
+}
+
 .dropdown-menu {
   position: relative;
   margin-right: 10px;
+  padding: 5px;
 }
 
 .menu-btn {
